Do not call camel_store_folder_renamed() in ews_rename_folder_sync()

The back end is not supposed to, and if we fix that then renaming a folder
hierarchy works. Moving it doesn't, but that's just the same for imapx and
local storage too: https://bugzilla.gnome.org/show_bug.cgi?id=647816